<resources>
    <string name="app_name">CemaraApps</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="login_with_google">Login with Google</string>
    <string name="family_task_with_cemara">Family Task with Cemara</string>
    <string name="your_web_client_id">Your web client id</string>
    <string name="manage_your">Manage Your</string>
    <string name="img_close">img_close</string>
    <string name="question_fam">Already Have Family?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="who">Who will do ?</string>
    <string name="ibu">Ibu</string>
    <string name="ayah">Ayah</string>
    <string name="raka">Raka</string>
    <string name="maya">Maya</string>
    <string name="key">Key</string>
    <string name="jonas">Jonas</string>
    <string name="create_family">Create Family</string>
    <string name="create">Create</string>
    <string name="join_the_family">Join the Family</string>
    <string name="input_token">Input Token</string>
    <string name="join">Join</string>
    <string name="create_task">Create Task</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="who_will_do">Who Will Do ?</string>
    <string name="description">Description</string>
    <string name="btn_create_new_task">Create new Task</string>
    <string name="end_time">End Time</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="who_will">__________________________________________</string>
    <string name="detail">Detail</string>
    <string name="bg">bg</string>
    <string name="family">family</string>
    <string name="family_name">Family Name</string>
    <string name="name">Name</string>
    <string name="token">token</string>
    <string name="kode">Token</string>
    <string name="members">Members</string>
    <string name="add_members">Add Members</string>
    <string name="Members">Members</string>
</resources>