<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/popup4">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/close"
            android:contentDescription="@string/img_close"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/bg_popup"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_havefam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="82dp"
                android:gravity="center_horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/who"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/ibu"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/ayah"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="44dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/raka"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/maya"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/key"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="44dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/jonas"
                    android:textColor="@color/black"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>



</RelativeLayout>