<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QfamilyActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/close"
            android:contentDescription="@string/img_close"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:orientation="vertical"
            android:background="@drawable/bg_popup">

            <TextView
                android:id="@+id/tv_havefam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="82dp"
                android:gravity="center_horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/question_fam"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="272dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_no"
                    android:layout_width="272dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/gold"
                    android:text="@string/no"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>