<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    tools:context=".DetailActivity">

    <ImageButton
        android:id="@+id/back_Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Detail"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tv_Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Detail"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_rounded_shape"
            android:contentDescription="@string/bg" />

        <Button
            android:id="@+id/ibAddMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/gold"
            android:drawableLeft="@drawable/addmembers"
            android:text="@string/add_members"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rtFam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_rounded_rectangle_primary"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/fam"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/family"
                    android:padding="10dp"
                    android:src="@drawable/fam" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/fam"
                    android:text="@string/family_name"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/nameFam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_toEndOf="@id/fam"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Fam Name" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rt_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:background="@drawable/stroke_rounded_rectangle_primary"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/ivToken"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/token"
                    android:padding="10dp"
                    android:src="@drawable/token" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@id/ivToken"
                    android:text="@string/kode"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tokenFam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_toEndOf="@+id/ivToken"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Fam Name" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_add_iuran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:background="@drawable/stroke_rounded_rectangle_primary"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="10dp"
                    android:src="@drawable/members" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@id/iv_logo"
                    android:text="@string/members"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/memberFam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_toEndOf="@id/iv_logo"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Members" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>